--- a/amq-broker/ActiveMQArtemis_broker.yaml
+++ b/amq-broker/ActiveMQArtemis_broker.yaml
@@ -7,10 +7,11 @@ metadata:
     description: deployment for ${BROKER_NAME}-template
   name: ${BROKER_NAME}-template
 objects:
-- apiVersion: broker.amq.io/v2alpha5
+- apiVersion: broker.amq.io/v1beta1
   kind: ActiveMQArtemis
   metadata:
     name: ${BROKER_NAME}
+    application: ${BROKER_NAME}
     labels:
       app: ${BROKER_NAME}
   spec:
