--- a/rh-sso-integration/rhsso-realm.yaml
+++ b/rh-sso-integration/rhsso-realm.yaml
@@ -2,7 +2,7 @@
 apiVersion: keycloak.org/v1alpha1
 kind: KeycloakRealm
 metadata:
-  name: keycloak-realm
+  name: myamq-realm
   labels:
     app: keycloak
     realm: myamq-realm
