--- a/rh-sso-integration/rhsso-client-broker.yaml
+++ b/rh-sso-integration/rhsso-client-broker.yaml
@@ -1,34 +1,54 @@
-apiVersion: keycloak.org/v1alpha1
-kind: KeycloakClient
+# Keycloak Client for AMQ Broker  
+apiVersion: template.openshift.io/v1
+kind: Template
+labels:
+  template: ${BROKER_NAME}-client-broker-template
 metadata:
-  name: artemis-broker
-spec:
-  realmSelector:
-    matchLabels:
-      realm: myamq-realm
-  client:
-    clientId: artemis-broker
-    name: artemis-broker
-    description: Client to consume or publish messages into an AMQ Broker
-    enabled: true
-    protocol: openid-connect
-    clientAuthenticatorType: client-secret
-    secret: 0c2edacd-146a-442a-8852-b29d945a96e8
-    standardFlowEnabled: false
-    directAccessGrantsEnabled: true
-    serviceAccountsEnabled: false
-    defaultClientScopes:
-      - web-origins
-      - role_list
-      - profile
-      - roles
-      - email
-    optionalClientScopes:
-      - address
-      - phone
-      - offline_access
-      - microprofile-jwt
-  roles:
-    - name: admin
-    - name: producer
-    - name: consumer
+  annotations:
+    description: Template for ${BROKER_NAME} (broker) client 
+  name: ${BROKER_NAME}-client-broker-template
+objects:
+  - apiVersion: keycloak.org/v1alpha1
+    kind: KeycloakClient
+    metadata:
+      name: amq-broker
+      labels:
+        app: ${RH_SSO_NAME}
+    spec:
+      realmSelector:
+        matchLabels:
+          realm: ${BROKER_NAME}-realm
+      client:
+        clientId: amq-broker
+        name: amq-broker
+        description: Client to consume or publish messages into an AMQ Broker
+        enabled: true
+        protocol: openid-connect
+        clientAuthenticatorType: client-secret
+        secret: 0c2edacd-146a-442a-8852-b29d945a96e8
+        standardFlowEnabled: false
+        directAccessGrantsEnabled: true
+        serviceAccountsEnabled: false
+        defaultClientScopes:
+          - email
+          - profile
+          - roles
+          - web-origins
+        optionalClientScopes:
+          - address
+          - microprofile-jwt
+          - offline_access
+          - phone
+      roles:
+        - name: admin
+        - name: consumer
+        - name: sender
+        - name: guest
+      defaultRoles:
+        - guest
+
+parameters:
+  - name: RH_SSO_NAME
+    value: keycloak
+  - name: BROKER_NAME
+    value: my-broker
