--- a/rh-sso-integration/rhsso-users.yaml
+++ b/rh-sso-integration/rhsso-users.yaml
@@ -1,56 +1,106 @@
-apiVersion: keycloak.org/v1alpha1  
-kind: KeycloakUser
+# Keycloak Users for AMQ Broker  
+apiVersion: template.openshift.io/v1
+kind: Template
+labels:
+  template: ${BROKER_NAME}-users-template
 metadata:
-  name: amqadmin
-spec:
-  realmSelector:
-    matchLabels:
-      realm: myamq-realm
-  user:
-    username: amqadmin
-    credentials:
-      - type: password
-        value: secret
-    enabled: true
-    firstName: AMQ Admin
-    clientRoles:
-      artemis-broker:
-        - admin
----
-apiVersion: keycloak.org/v1alpha1
-kind: KeycloakUser
-metadata:
-  name: amqproducer
-spec:
-  realmSelector:
-    matchLabels:
-      realm: myamq-realm
-  user:
-    username: amqproducer
-    credentials:
-      - type: password
-        value: secret
-    enabled: true
-    firstName: Message producer
-    clientRoles:
-      artemis-broker:
-        - producer
----
-apiVersion: keycloak.org/v1alpha1
-kind: KeycloakUser
-metadata:
-  name: amqconsumer
-spec:
-  realmSelector:
-    matchLabels:
-      realm: myamq-realm
-  user:
-    username: amqconsumer
-    credentials:
-      - type: password
-        value: secret
-    enabled: true
-    firstName: Message consumer
-    clientRoles:
-      artemis-broker:
-        - consumer
+  annotations:
+    description: Template for ${BROKER_NAME} users 
+  name: ${BROKER_NAME}-users-template
+objects:
+  - apiVersion: keycloak.org/v1alpha1
+
+    kind: KeycloakUser
+    metadata:
+      name: admin
+      labels:
+        app: ${RH_SSO_NAME}
+    spec:
+      user:
+        username: "admin"
+        firstName: "Admin"
+        lastName: "AMQ Brokers"
+        enabled: true
+        emailVerified: false
+        credentials:
+          - type: "password"
+            value: "password"
+# can define to auto-generate pass and store as secret
+#            value: secret
+        realmRoles:
+          - "default-roles-amq-broker-realm"
+        clientRoles:
+          amq-broker:
+            - "admin"
+          amq-console:
+            - "admin"
+          realm-management:
+            - "amq-broker-realm"
+      realmSelector:
+        matchLabels:
+          realm: ${BROKER_NAME}-realm
+
+  - apiVersion: keycloak.org/v1alpha1
+    kind: KeycloakUser
+    metadata:
+      name: admin-viewer
+      labels:
+        app: ${RH_SSO_NAME}
+    spec:
+      user:
+        username: "admin-viewer"
+        firstName: "Admin Viewer"
+        lastName: "AMQ Brokers"
+        enabled: true
+        emailVerified: false
+        credentials:
+          - type: "password"
+            value: "password"
+# can define to auto-generate pass and store as secret
+#            value: secret
+        realmRoles:
+          - "default-roles-amq-broker-realm"
+        clientRoles:
+          amq-console:
+            - "viewer"
+          realm-management:
+            - "amq-broker-realm"
+      realmSelector:
+        matchLabels:
+          realm: ${BROKER_NAME}-realm
+
+  - apiVersion: keycloak.org/v1alpha1
+    kind: KeycloakUser
+    metadata:
+      name: application
+      labels:
+        app: ${RH_SSO_NAME}
+    spec:
+      user:
+        username: "application"
+        firstName: "Application"
+        lastName: "User"
+        enabled: true
+        emailVerified: false
+        credentials:
+          - type: "password"
+            value: "password"
+# can define to auto-generate pass and store as secret
+#            value: secret
+        realmRoles:
+          - "default-roles-amq-broker-realm"
+        clientRoles:
+          amq-broker:
+            - "consumer"
+            - "sender"
+          realm-management:
+            - "amq-broker-realm"
+      realmSelector:
+        matchLabels:
+          realm: ${BROKER_NAME}-realm
+
+parameters:
+  - name: RH_SSO_NAME
+    value: keycloak
+  - name: BROKER_NAME
+    value: my-broker
