--- a/rh-sso-integration/rhsso-client-broker.yaml
+++ b/rh-sso-integration/rhsso-client-broker.yaml
@@ -30,6 +30,7 @@ objects:
         directAccessGrantsEnabled: true
         serviceAccountsEnabled: false
         defaultClientScopes:
+          - role_list
           - email
           - profile
           - roles
